correciones varias al funcionamiento